--- a/styles.scss
+++ b/styles.scss
@@ -6,3 +6,9 @@
 .cover{
     object-fit: cover;
 }
+
+.cut-text { 
+    text-overflow: ellipsis; 
+    overflow: hidden; 
+    white-space: nowrap; 
+}
